src/test/deca/context/invalid/decaObjet/method/13voidParam.deca
// Description:
// Test d'une méthode dont un paramètre est de type void
//
// Resultats:
//      13voidParam.deca:11:12:
//
// Historique:
//    crée le 16/06/2022

class A {          
    void a (void b) {}
} 
{     
}